# 8bitinfinityjam

./: CMakeLists.txt
assets/: level.tiled-session  tileset.tsx
assets/ldtk/: Levels.ldtk
sources/: Animator.cpp  Animator.hpp  GameManager.cpp  GameManager.hpp  MainMenuState.cpp  MainMenuState.hpp  PauseState.cpp  PauseState.hpp  PlayState.cpp  PlayState.hpp  Player.cpp  Player.hpp  State.hpp  StateManager.cpp  StateManager.hpp  TileMap.cpp  TileMap.hpp  bullet.cpp  bullet.hpp  main.cpp
